# digital-assets

./: .gitignore  LICENSE  LISTING_REQUIREMENTS.md  Makefile  README.md  digital-assets  digital-assets.in  fr.fgrabenstaetter.DigitalAssets.in  fr.fgrabenstaetter.DigitalAssets.json  meson.build
DigitalAssets/data/: apiData.py  currencies.py  currency.py  tools.py
DigitalAssets/sys/: apiData.py  currencies.py  currency.py  tools.py
DigitalAssets/ui/: currencySwitcher.py  currencyView.py  env.py  graph.py  headerBar.py  window.py
dassets/: application.py  currencies.py  currency.py  currencySwitcher.py  currencyView.py  digital-assets.in  env.in  graph.py  headerBar.py  nomicsAPI.py  settings.py  settingsWindow.py  tools.py
dassets/sys/: apiData.py  currencies.py  currency.py  settings.py  tools.py
dassets/ui/: application.py  currencySwitcher.py  currencyView.py  graph.py  headerBar.py  settingsWindow.py  window.py
data/: digital-assets.appdata.xml  digital-assets.desktop  digital-assets.gresource.xml  digital-assets.gschema.xml  fr.fgrabenstaetter.DigitalAssets.appdata.xml  fr.fgrabenstaetter.DigitalAssets.desktop  fr.fgrabenstaetter.DigitalAssets.gresource.xml  fr.fgrabenstaetter.DigitalAssets.gschema.xml  gschemas.compiled  meson.build
data/css/: currencySwitcher.css  currencyView.css  global.css  headerBar.css  mainWindow.css  settingsWindow.css  style.css
data/locale/: digital-assets.pot  fr.fgrabenstaetter.DigitalAssets.pot
data/locale/fr/LC_MESSAGES/: digital-assets.mo  digital-assets.po  fr.fgrabenstaetter.DigitalAssets.mo  fr.fgrabenstaetter.DigitalAssets.po
data/po/: digital-assets.pot  fr.po  meson.build
data/resources/css/: style.css
data/resources/locale/: locale.pot  template.pot
data/resources/locale/fr/LC_MESSAGES/: locale.mo  locale.po
data/ui/: application.ui  currencyRowTemplate.ui  currencyView.ui  headerBar.ui  mainWindow.ui  quoteRowTemplate.ui  settingsWindow.ui
share/: digital-assets.desktop
share/resources/css/: style.css
